<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://tools.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="fr.accentweb.speedMath.ui.arcade.ArcadeFragment"
        android:label="@string/title_mode"
        tools:layout="@layout/fragment_arcade">

        <action
            android:id="@+id/action_navigation_home_to_gameFragment"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_navigation_home_to_qcmFragment"
            app:destination="@id/qcmFragment" />
        <action
            android:id="@+id/action_navigation_home_to_dualFragment"
            app:destination="@id/dualFragment" />
        <action
            android:id="@+id/action_navigation_home_to_waitingRoomFragment"
            app:destination="@id/waitingRoomFragment" />
        <action
            android:id="@+id/action_navigation_home_to_dailyChallengeFragment"
            app:destination="@id/dailyChallengeFragment" />
        <action
            android:id="@+id/action_navigation_home_to_memoryFragment"
            app:destination="@id/memoryFragment" />
        <action
            android:id="@+id/action_navigation_home_to_memoryDualFragment"
            app:destination="@id/memoryDualFragment" />
        <action
            android:id="@+id/action_navigation_home_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_mathInvadersFragment"
            app:destination="@id/mathInvadersFragment" />
        <action
            android:id="@+id/action_navigation_home_to_mathTetrisFragment"
            app:destination="@id/mathTetrisFragment" />
        <action
            android:id="@+id/action_navigation_home_to_mathKartFragment"
            app:destination="@id/mathKartFragment" />
    </fragment>

    <fragment
        android:id="@+id/gameFragment"
        android:name="fr.accentweb.speedMath.ui.game.GameFragment"
        android:label="@string/action_game"
        tools:layout="@layout/fragment_game"/>

    <fragment
        android:id="@+id/qcmFragment"
        android:name="fr.accentweb.speedMath.ui.dual.QCMFragment"
        android:label="@string/action_qcm"
        tools:layout="@layout/fragment_qcm"/>

    <fragment
        android:id="@+id/dualFragment"
        android:name="fr.accentweb.speedMath.ui.dual.DualFragment"
        android:label="@string/action_dual"
        tools:layout="@layout/fragment_dual"/>
    <fragment
        android:id="@+id/waitingRoomFragment"
        android:name="fr.accentweb.speedMath.ui.online.WaitingRoomFragment"
        android:label="@string/action_qcm_online"
        tools:layout="@layout/fragment_waiting_room">
        <action
            android:id="@+id/action_waitingRoomFragment_to_onlineQCMFragment"
            app:destination="@id/onlineQCMFragment" />
    </fragment>
    <fragment
        android:id="@+id/waitingFriendFragment"
        android:name="fr.accentweb.speedMath.ui.friend.WaitingFriendFragment"
        android:label="@string/action_qcm_friend"
        tools:layout="@layout/fragment_waiting_friend">
        <action
            android:id="@+id/action_waitingFriendFragment_to_friendFragment"
            app:destination="@id/friendFragment" />
    </fragment>
    <fragment
        android:id="@+id/joinFriendFragment"
        android:name="fr.accentweb.speedMath.ui.friend.JoinFriendFragment"
        android:label="@string/action_qcm_friend"
        tools:layout="@layout/fragment_join_friend">
        <action
            android:id="@+id/action_joinFriendFragment_to_friendFragment"
            app:destination="@id/friendFragment" />
    </fragment>
    <fragment
        android:id="@+id/friendFragment"
        android:name="fr.accentweb.speedMath.ui.friend.FriendFragment"
        android:label="@string/action_qcm_friend"
        tools:layout="@layout/fragment_friend"/>
    <fragment
        android:id="@+id/dailyChallengeFragment"
        android:name="fr.accentweb.speedMath.ui.daily.DailyChallengeFragment"
        android:label="@string/action_daily_challenge"
        tools:layout="@layout/fragment_daily_challenge">
        <action
            android:id="@+id/action_dailyChallengeFragment_to_dailyGameFragment"
            app:destination="@id/dailyGameFragment" />
    </fragment>

    <fragment
        android:id="@+id/dailyGameFragment"
        android:name="fr.accentweb.speedMath.ui.daily.DailyGameFragment"
        android:label="Daily Challenge"
        tools:layout="@layout/fragment_daily_game"/>

    <fragment
        android:id="@+id/mathInvadersFragment"
        android:name="fr.accentweb.speedMath.ui.game.MathInvadersFragment"
        android:label="@string/action_math_invaders"
        tools:layout="@layout/fragment_daily_game"/>

    <fragment
        android:id="@+id/mathTetrisFragment"
        android:name="fr.accentweb.speedMath.ui.game.MathTetrisFragment"
        android:label="@string/action_math_tetris"
        tools:layout="@layout/fragment_daily_game"/>

    <fragment
        android:id="@+id/mathKartFragment"
        android:name="fr.accentweb.speedMath.ui.game.MathKartFragment"
        android:label="@string/action_math_kart"
        tools:layout="@layout/fragment_daily_game"/>

    <fragment
        android:id="@+id/memoryFragment"
        android:name="fr.accentweb.speedMath.ui.memory.MemoryFragment"
        android:label="@string/action_memory"
        tools:layout="@layout/fragment_memory"/>
    <fragment
        android:id="@+id/memoryDualFragment"
        android:name="fr.accentweb.speedMath.ui.memory.MemoryDualFragment"
        android:label="@string/action_memory_dual"
        tools:layout="@layout/fragment_memory_dual"/>

    <fragment
        android:id="@+id/onlineQCMFragment"
        android:name="fr.accentweb.speedMath.ui.online.OnlineQCMFragment"
        android:label="@string/action_qcm_online"
        tools:layout="@layout/fragment_online_qcm"/>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="fr.accentweb.speedMath.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="fr.accentweb.speedMath.ui.league.LeagueFragment"
        android:label="@string/title_level"
        tools:layout="@layout/fragment_league">
    <action
        android:id="@+id/action_navigation_dashboard_to_levelFragment"
        app:destination="@id/levelFragment" />
    </fragment>

    <fragment
        android:id="@+id/levelFragment"
        android:name="fr.accentweb.speedMath.ui.level.LevelFragment"
        android:label="@string/action_game"
        tools:layout="@layout/fragment_level"/>

    <fragment
        android:id="@+id/navigation_stats"
        android:name="fr.accentweb.speedMath.ui.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="fr.accentweb.speedMath.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>