<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="14dp"
    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Icône cercle + -->
        <TextView
            android:id="@+id/iconCard"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:gravity="center"
            android:text="@string/icon_add"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            android:background="@drawable/circle_bg"
            android:textColor="@color/blue_primary" />

        <!-- Textes -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_add"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                android:fontFamily="@font/inter_bold"
                android:textColor="?attr/textPrimary"/>

            <TextView
                android:id="@+id/descriptionCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_add"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                android:textColor="@color/blue_primary"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
